tests/testdata/npm/cjs_this_in_exports/main.out
1
1
error: Uncaught (in promise) TypeError: this.otherMethod is not a function
    at getValue (file://[WILDCARD]/@denotest/cjs-this-in-exports/1.0.0/index.js:3:17)
    at file://[WILDCARD]/testdata/npm/cjs_this_in_exports/main.js:11:1
